# EdgeCatch

./: .gitignore  AGENTS.md  CONTRACT.md  PROJECT_BRIEF.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: methodology-log.md
evidence/humanize/walking-skeleton/: README.md  invalid-proposal.txt
evidence/humanize/walking-skeleton/prompt-run/: report.json  report.md
examples/: humanize.toml
src/edge_catch/: __init__.py  __main__.py  cli.py  config.py  coverage_data.py  environments.py  pipeline.py  prompts.py  proposals.py  reports.py  repositories.py  runner.py  targets.py  validation.py
tests/: test_cli.py  test_config.py  test_coverage_data.py  test_pipeline.py  test_proposals.py  test_reports.py  test_repositories.py  test_runner.py  test_targets.py
