[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-catch"
version = "0.1.0.dev0"
description = "Human-reviewed edge-case test generation for Python repositories"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Will Eckenroth", email = "will@eckenroth.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "pytest>=8.3,<9",
    "ruff>=0.12,<1",
]

[project.scripts]
edge-catch = "edge_catch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]
